add image to the landing page

--- a/WordCounter.Tests/WordCounter.Tests.csproj
+++ b/WordCounter.Tests/WordCounter.Tests.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\WordCounter\WordCounter.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="EmptyClass.cs" />
+  </ItemGroup>
 </Project>
